--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,2 +1,6 @@
-endpoint: https://us1.prisma.sh/andrew-mcgoveran/sickest-fits/dev
-datamodel: datamodel.prisma
+endpoint: ${env:PRISMA_ENDPOINT}
+datamodel: datamodel.graphql
+# secret: ${env:PRISMA_SECRET}
+hooks:
+  post-deploy:
+    - graphql get-schema -p prisma
